--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.1.5",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
