--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
+    "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
